# gitlab-cmake-ci

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  run.sh
cmake/: coverage.cmake  dev-mode.cmake  install-rules.cmake  spell.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: repo1_gtest1.cpp  repo1_gtest2.cpp  repo1_test.cpp
